# mmft-STL-generator

./: CMakeLists.txt  README.md
examples/: channelTest.json  crossTest.json  cubeTest.json  kinkTest.json
src/: CMakeLists.txt  main.cpp
src/architecture/: CMakeLists.txt  Channel.h  Channel.hh  Network.h  Network.hh  Node.h  Node.hh  pChannel.h  pChannel.hh  pNetwork.h  pNetwork.hh  pNode.h  pNode.hh
src/parser/: CMakeLists.txt  jsonParser.h  jsonParser.hh  jsonReader.h  jsonReader.hh  pjsonParser.h  pjsonParser.hh  pjsonReader.h  pjsonReader.hh
src/stlHandler/: BaseSTL.h  BaseSTL.hh  CMakeLists.txt  NetworkSTL.h  NetworkSTL.hh  Primitives.h  Stl.h  Stl.hh
src/stlHandler/primitives/: CMakeLists.txt  Channel.h  Channel.hh  Circle.h  Circle.hh  Core.h  Core.hh  Cuboid.h  Cuboid.hh  Pizza.h  Pizza.hh  Rectangle.h  Rectangle.hh  StlChannel.h  StlChannel.hh  Trapezoid.h  Trapezoid.hh  TrapezoidalChannel.h  TrapezoidalChannel.hh  TrapezoidalPrism.h  TrapezoidalPrism.hh
tests/: CMakeLists.txt  Planar.test.cpp  test.cpp
